# serializable

./: .gitignore  README.md
src/: CMakeLists.txt  member.hpp  member_type.h  memory.h  serializable.hpp  serializable_base.hpp  serializable_string.hpp  serializable_test.cpp  serializable_vector.hpp
src/srlz/: base.hpp  member.hpp  member_type.h  memory.h  serializable.hpp  string.hpp  vector.hpp
src/unit_tests/: CMakeLists.txt  copy_assignment_operator_test.hpp  custom_entity_test.hpp  debug_helper.hpp  fundamental_types_test.hpp  has_value_test.hpp  length_buffer_test.hpp  memory_test.hpp  nested_custom_entity_test.hpp  nested_entity_test.hpp  selective_test.hpp  serializable_test.cpp  simple_test.hpp  string_test.hpp  vector_test.hpp
